--- a/angular-frontend/src/app/Admin/entreprise/edit-entreprise/edit-entreprise.component.html
+++ b/angular-frontend/src/app/Admin/entreprise/edit-entreprise/edit-entreprise.component.html
@@ -5,11 +5,12 @@
         <div class="card">
           <div class="card-header card-header-danger">
             <h4 class="card-title">Modifier une entreprise</h4>
-            <div class="card-header">
+            <div class="card-category">
               <!-- if we know the link we type normally, if like delete a list we use [] -->
               <a
-                class="btn btn-outline-info float-right"
+                
                 routerLink="/admin/entreprise/get"
+                class="btn btn-outline-warning float-right"
                 >Toutes les Entreprises</a
               >
             </div>
@@ -76,7 +77,7 @@
                   [disabled]="isSubmitting"
                   (click)="editentreprise()"
                   type="button"
-                  class="btn btn-outline-primary mt-3"
+                  class="btn btn-outline-info mt-3"
                 >
                   Modifier
                 </button>
