Some small design enhancements, hovers

--- a/angular-frontend/src/app/Admin/formation/one-formation/one-formation.component.html
+++ b/angular-frontend/src/app/Admin/formation/one-formation/one-formation.component.html
@@ -68,6 +68,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <div class="img">
+                  <label class="text-muted">Image:</label><br/>
                   <img
                     class="pt-4"
                     *ngIf="formation.imageName !== null; else defaultImage"
