--- a/angular-frontend/src/app/Admin/formation/dashboard/dashboard.component.css
+++ b/angular-frontend/src/app/Admin/formation/dashboard/dashboard.component.css
@@ -15,3 +15,14 @@
     max-width: 100%;
     max-height: 100%;
 }
+
+  
+.card-chart {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .card-chart:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  }
+  
