--- a/angular-frontend/src/app/Admin/formation/dashboard/dashboard.component.html
+++ b/angular-frontend/src/app/Admin/formation/dashboard/dashboard.component.html
@@ -56,18 +56,20 @@
               Delete
             </button>
 
-            <h4 class="card-title">{{ formation.nom }}</h4>
+            <h4 class="card-title">{{ formation.nom }} </h4>
             <p class="card-category">
               <span class="text-success"
                 ><i class="fa fa-long-arrow-up"></i> Date de debut:
                 {{ formation.dateDebut }}
               </span>
-            </p>
+             
+            </p> <br/><div class="text-gray">
+              Description: 
+              {{ formation.description }}</div>
           </div>
           <div class="card-footer">
             <div class="stats">
-              <i class="material-icons"> </i> Description:
-              {{ formation.description }} | Cout: {{ formation.cout }} Dh
+              <i class="material-icons"> </i>  Cout: {{ formation.cout }} Dh
             </div>
           </div>
         </div>
@@ -81,6 +83,6 @@
     >Orange: Formateur affected but entreprise NOT affected</small
   >
   <small class="btn btn-outline-danger"
-    >Red: Formateur and entreprise are NOT affected</small
+    >Red: Formateur NOT affected</small
   >
 </div>
