--- a/angular-frontend/src/app/Admin/formation/dashboard/dashboard.component.html
+++ b/angular-frontend/src/app/Admin/formation/dashboard/dashboard.component.html
@@ -74,9 +74,7 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <small class="btn btn-outline-success"
+      <small class="btn btn-outline-success"
     >Green: Formateur and entreprise are affected</small
   >
   <small class="btn btn-outline-warning"
@@ -85,4 +83,9 @@
   <small class="btn btn-outline-danger"
     >Red: Formateur NOT affected</small
   >
+    </div>
+ <!-- <a href="/admin/dashboard#" title="Scroll up" class="up ml-4 mb-7" style="margin-bottom: 9px; font-size:130%; text-decoration:none; float:left; ">👆</a> -->
+   
+  </div>
+  
 </div>
