--- a/angular-frontend/src/app/components/navbar/navbar.component.html
+++ b/angular-frontend/src/app/components/navbar/navbar.component.html
@@ -10,6 +10,7 @@
             <span class="navbar-toggler-icon icon-bar"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
+            <!-- SEARCH BY NOM FORMATION -->
             <form class="navbar-form" [formGroup]="searchForm" (ngSubmit)="onSubmit()">
                 <div class="input-group no-border">
                   <input
