--- a/angular-frontend/src/app/Admin/formation copy/list-demandes/list-demandes.component.html
+++ b/angular-frontend/src/app/Admin/formation copy/list-demandes/list-demandes.component.html
@@ -14,7 +14,7 @@
                 class="pt-4"
                 *ngIf="Demande.formation.imageName !== null; else defaultImage"
                 [src]="
-                  'http://localhost:8080/demande/' + Demande.formation.id + '/image'
+                  'http://localhost:8080/formation/' + Demande.formation.id + '/image'
                 "
                 width="200"
                 height="150"
@@ -30,9 +30,30 @@
             </div>
           </div>
           <div class="card-body">
+          
+
+            <h4 class="card-title">{{ Demande.formation.nom }} </h4>
+            <p class="card-category">
+              <span class="text-success"
+                ><i class="fa fa-long-arrow-up"></i> Date de debut:
+                {{ Demande.dateDebut }} <br/>
+                Cout: {{ Demande.formation.cout }} 
+              </span>
+             
+            </p> <br/><div class="text-gray">
+              Formateur: {{ Demande.formateur.name }} <br/>
+              Mot cles: {{ Demande.formateur.competences }}<br/>
+              E-mail: {{ Demande.formateur.email }}<br/>
+            
+            </div>
+          </div>
+          <div class="card-footer">
+            <div class="stats">
+              <i class="material-icons"> </i>  
+            </div><br/>
             <button
             (click)="accepteDemande(Demande.formateur.id,Demande.formation.id)"
-              class="btn btn-outline-info mx-1"
+              class="btn btn-outline-success mx-1"
               >Accepter demande
             </button>
             <!-- <a
@@ -47,37 +68,10 @@
             >
               Rejeter
             </button>
-
-            <h4 class="card-title">{{ Demande.formation.nom }} </h4>
-            <p class="card-category">
-              <span class="text-success"
-                ><i class="fa fa-long-arrow-up"></i> Date de debut:
-                {{ Demande.dateDebut }}
-              </span>
-             
-            </p> <br/><div class="text-gray">
-              Formateur: {{ Demande.formateur.name }} <br/>
-              Mot cles: {{ Demande.formateur.competences }}<br/>
-              E-mail: {{ Demande.formateur.email }}<br/>
-            
-            </div>
-          </div>
-          <div class="card-footer">
-            <div class="stats">
-              <i class="material-icons"> </i>  Cout: {{ Demande.formation.cout }} 
-            </div>
           </div>
         </div>
       </div>
-      <small class="btn btn-outline-success"
-    >Green: Formateur and entreprise are affected</small
-  >
-  <small class="btn btn-outline-warning"
-    >Orange: Formateur affected but entreprise NOT affected</small
-  >
-  <small class="btn btn-outline-danger"
-    >Red: Formateur NOT affected</small
-  >
+    
     </div>
  <!-- <a href="/admin/dashboard#" title="Scroll up" class="up ml-4 mb-7" style="margin-bottom: 9px; font-size:130%; text-decoration:none; float:left; ">👆</a> -->
    
