--- a/angular-frontend/src/app/Admin/formation copy/list-demandes/list-demandes.component.html
+++ b/angular-frontend/src/app/Admin/formation copy/list-demandes/list-demandes.component.html
@@ -36,7 +36,7 @@
             <p class="card-category">
               <span class="text-success"
                 ><i class="fa fa-long-arrow-up"></i> Date de debut:
-                {{ Demande.dateDebut }} <br/>
+                {{ Demande.formation.dateDebut }} <br/>
                 Cout: {{ Demande.formation.cout }} 
               </span>
              
