--- a/angular-frontend/src/app/Admin/formation/one-formation/one-formation.component.html
+++ b/angular-frontend/src/app/Admin/formation/one-formation/one-formation.component.html
@@ -126,14 +126,24 @@
                 <label class="text-muted"
                   >Nom de formateur associe avec cette formation::</label
                 >
-                <p *ngIf="formation.formateur!==null">{{ formation.formateur.name }}</p>
+                <p *ngIf="formation.formateur===null">{{ formation.formateur.name }}</p>
+                <p *ngIf="formation.formateur!==null">None</p>
               </div>
 
               <div class="form-group">
                 <label class="text-muted"
                   >Entreprise qui benefice de cette formation:</label
                 >
-                <p *ngIf="formation.entreprise!==null">{{ formation.entreprise.nom }}</p>
+                <p *ngIf="formation.entreprise!==null">{{ formation.entreprise.nom}}</p>
+                <p *ngIf="formation.entreprise===null">None</p>
+              </div>
+
+              <div class="form-group">
+                <label class="text-muted"
+                  >Liste des individus qui benefice de cette formation:</label
+                >
+                <p *ngFor="let individu of formation.individus">Nom: {{ individu.nom}}, Email: {{ individu.email}}</p><br>
+                <p *ngIf="formation.individus===null">None</p>
               </div>
             </div>
           </div>
