--- a/angular-frontend/src/app/Admin/entreprise/create-entreprise/create-entreprise.component.html
+++ b/angular-frontend/src/app/Admin/entreprise/create-entreprise/create-entreprise.component.html
@@ -75,14 +75,16 @@
                   required
                 />
 
+                <div class="form-group text-center">
                 <button
                   [disabled]="isSubmitting"
                   (click)="addEntreprise()"
                   type="button"
-                  class="form-control btn btn-outline-info mt-3"
+                  class=" btn btn-outline-info  mt-3" 
                 >
                   Ajouter
                 </button>
+                </div>
               </div>
             </form>
           </div>
