--- a/angular-frontend/src/app/Admin/entreprise/edit-entreprise/edit-entreprise.component.html
+++ b/angular-frontend/src/app/Admin/entreprise/edit-entreprise/edit-entreprise.component.html
@@ -73,6 +73,7 @@
                   id="email"
                 />
 
+                <div class="form-group text-center">
                 <button
                   [disabled]="isSubmitting"
                   (click)="editentreprise()"
@@ -81,6 +82,7 @@
                 >
                   Modifier
                 </button>
+                </div>
               </div>
             </form>
           </div>
