--- a/angular-frontend/src/app/Admin/entreprise/list-Entreprise/list-Entreprise.component.html
+++ b/angular-frontend/src/app/Admin/entreprise/list-Entreprise/list-Entreprise.component.html
@@ -2,21 +2,18 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <div class="card">
-          <div class="card-header card-header-danger">
+        <div class="card" style="height: 460px;">
+          <div class="card-header card-header-danger sticky-top fixed">
             <h4 class="card-title">Liste des entreprises</h4>
             <p class="card-category">
-              <a
-                routerLink="/admin/entreprise/create"
-                class="btn btn-outline-primary float-right"
-                >Ajouter Entreprise</a
-              >
+              <a routerLink="/admin/entreprise/create" class="btn btn-outline-primary float-right ">Ajouter
+                Entreprise</a>
             </p>
           </div>
           <div class="card-body">
-            <div class="table-responsive">
-              <table class="table text-center">
-                <thead class="text-primary">
+            <div class="table-responsive" style="max-height: 350px; overflow-y: auto;">
+              <table class="table">
+                <thead class="text-primary text-center">
                   <th>ID</th>
                   <th>Nom</th>
                   <th>Addresse</th>
@@ -25,7 +22,7 @@
                   <th>E-Mail</th>
                   <th class="text-center" style="text-align: center">Action</th>
                 </thead>
-                <tbody>
+                <tbody class="text-center">
                   <tr *ngFor="let entreprise of entreprises">
                     <td>{{ entreprise.id }}</td>
                     <td>{{ entreprise.nom }}</td>
@@ -34,29 +31,19 @@
                     <td>{{ entreprise.url }}</td>
                     <td>{{ entreprise.email }}</td>
                     <td class="text-center">
-                      <a
-                        [routerLink]="[
+                      <a [routerLink]="[
                           '/admin/entreprise',
                           entreprise.id,
                           'details'
-                        ]"
-                        class="btn btn-outline-info mx-1"
-                        >Details</a
-                      >
-                      <button
-                        [routerLink]="[
+                        ]" class="btn btn-outline-info mx-1">Details</a>
+                      <button [routerLink]="[
                           '/admin/entreprise',
                           entreprise.id,
                           'edit'
-                        ]"
-                        class="btn btn-outline-warning mx-1"
-                      >
+                        ]" class="btn btn-outline-warning mx-1">
                         Edit
                       </button>
-                      <button
-                        (click)="deleteEntreprise(entreprise.id)"
-                        class="btn btn-outline-danger mx-1"
-                      >
+                      <button (click)="deleteEntreprise(entreprise.id)" class="btn btn-outline-danger mx-1">
                         Delete
                       </button>
                     </td>
